Fixing z-index

--- a/src/styles/_overlay.scss
+++ b/src/styles/_overlay.scss
@@ -16,6 +16,7 @@
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 5!important;
 }
 
 .overlay-bg {
